@@ -31,6 +31,7 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.ArrayList;
@@ -139,6 +140,7 @@ public class FlightServer implements AutoCloseable {
   }
 
   /** Shutdown the server, waits for up to 6 seconds for successful shutdown before returning. */
+  @Override
   public void close() throws InterruptedException {
     shutdown();
     final boolean terminated = awaitTermination(3000, TimeUnit.MILLISECONDS);
@@ -151,7 +153,7 @@ public class FlightServer implements AutoCloseable {
     server.shutdownNow();
 
     int count = 0;
-    while (!server.isTerminated() & count < 30) {
+    while (!server.isTerminated() && count < 30) {
       count++;
       logger.debug("Waiting for termination");
       Thread.sleep(100);
@@ -222,30 +224,26 @@ public class FlightServer implements AutoCloseable {
             // The implementation is platform-specific, so we have to find the classes at runtime
             builder = NettyServerBuilder.forAddress(location.toSocketAddress());
             try {
-              try {
-                // Linux
-                builder.channelType(
-                    (Class<? extends ServerChannel>)
-                        Class.forName("io.netty.channel.epoll.EpollServerDomainSocketChannel"));
-                final EventLoopGroup elg =
-                    (EventLoopGroup)
-                        Class.forName("io.netty.channel.epoll.EpollEventLoopGroup").newInstance();
-                builder.bossEventLoopGroup(elg).workerEventLoopGroup(elg);
-              } catch (ClassNotFoundException e) {
-                // BSD
-                builder.channelType(
-                    (Class<? extends ServerChannel>)
-                        Class.forName("io.netty.channel.kqueue.KQueueServerDomainSocketChannel"));
-                final EventLoopGroup elg =
-                    (EventLoopGroup)
-                        Class.forName("io.netty.channel.kqueue.KQueueEventLoopGroup").newInstance();
-                builder.bossEventLoopGroup(elg).workerEventLoopGroup(elg);
-              }
-            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
-              throw new UnsupportedOperationException(
-                  "Could not find suitable Netty native transport implementation for domain socket address.");
+              // Linux
+              builder.channelType(Class
+                      .forName("io.netty.channel.epoll.EpollServerDomainSocketChannel")
+                      .asSubclass(ServerChannel.class));
+              final EventLoopGroup elg = Class.forName("io.netty.channel.epoll.EpollEventLoopGroup")
+                      .asSubclass(EventLoopGroup.class).getConstructor().newInstance();
+              builder.bossEventLoopGroup(elg).workerEventLoopGroup(elg);
+            } catch (ClassNotFoundException e) {
+              // BSD
+              builder.channelType(
+                      Class.forName("io.netty.channel.kqueue.KQueueServerDomainSocketChannel")
+                              .asSubclass(ServerChannel.class));
+              final EventLoopGroup elg = Class.forName("io.netty.channel.kqueue.KQueueEventLoopGroup")
+                      .asSubclass(EventLoopGroup.class).getConstructor().newInstance();
+              builder.bossEventLoopGroup(elg).workerEventLoopGroup(elg);
             }
-            break;
+          } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException |
+                   InvocationTargetException e) {
+            throw new UnsupportedOperationException(
+                "Could not find suitable Netty native transport implementation for domain socket address.");
           }
         case LocationSchemes.GRPC:
         case LocationSchemes.GRPC_INSECURE:
@@ -368,7 +366,8 @@ public class FlightServer implements AutoCloseable {
       if (stream != null) {
         try {
           stream.close();
-        } catch (IOException ignored) {
+        } catch (IOException expected) {
+          // stream closes gracefully, doesn't expect an exception.
         }
       }
     }
